Resolving Issue: Elements - visual box model text visibility

--- a/sass/flatland.sass
+++ b/sass/flatland.sass
@@ -190,6 +190,12 @@ span.webkit-html-text-node.bogus
     &.selected.start
       background: $grey-darkest
 
+//~~~~ ELEMENTS ~~~~//
+.panel.elements
+  .metrics
+    color: $grey-darkest
+    .position:hover
+      color: $white
 //~~~~ CONSOLE ~~~~//
 // Select Menus in Console
 select.status-bar-item
